compiler/test/parse-err/func-param-dup.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func Dup(
        // expected-note@below{{previous definition here}}
        a: int,
        // expected-error@below{{duplicate parameter name 'a'}}
        a: int) -> int {
    return a;
}
